--- a/attack_detection.ipynb
+++ b/attack_detection.ipynb
@@ -1,6 +1,454 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Proyecto 1\n",
+    "## Detección de ataques"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import pandas_pro"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "part_1 = pd.read_csv(\"dataset/dataset-part1.csv\")\n",
+    "part_2 = pd.read_csv(\"dataset/dataset-part2.csv\")\n",
+    "\n",
+    "df = pd.concat([part_1, part_2])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Análisis Exploratorio"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>BIFLOW_DIRECTION</th>\n",
+       "      <th>DIRECTION</th>\n",
+       "      <th>DST_TO_SRC_SECOND_BYTES</th>\n",
+       "      <th>FIREWALL_EVENT</th>\n",
+       "      <th>FIRST_SWITCHED</th>\n",
+       "      <th>FLOW_ACTIVE_TIMEOUT</th>\n",
+       "      <th>FLOW_DURATION_MICROSECONDS</th>\n",
+       "      <th>FLOW_DURATION_MILLISECONDS</th>\n",
+       "      <th>FLOW_END_MILLISECONDS</th>\n",
+       "      <th>FLOW_END_SEC</th>\n",
+       "      <th>...</th>\n",
+       "      <th>TCP_WIN_MSS_IN</th>\n",
+       "      <th>TCP_WIN_MSS_OUT</th>\n",
+       "      <th>TCP_WIN_SCALE_IN</th>\n",
+       "      <th>TCP_WIN_SCALE_OUT</th>\n",
+       "      <th>SRC_TOS</th>\n",
+       "      <th>DST_TOS</th>\n",
+       "      <th>L7_PROTO_NAME</th>\n",
+       "      <th>SAMPLING_INTERVAL</th>\n",
+       "      <th>TOTAL_FLOWS_EXP</th>\n",
+       "      <th>LABEL</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1616660040</td>\n",
+       "      <td>120</td>\n",
+       "      <td>339</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1616660040010</td>\n",
+       "      <td>1616660040</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1460</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2293398</td>\n",
+       "      <td>Normal flow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>,</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1616660040</td>\n",
+       "      <td>120</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1616660040068</td>\n",
+       "      <td>1616660040</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>ICMP</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2293400</td>\n",
+       "      <td>Normal flow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>104</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1616660040</td>\n",
+       "      <td>120</td>\n",
+       "      <td>44725</td>\n",
+       "      <td>44</td>\n",
+       "      <td>1616660040114</td>\n",
+       "      <td>1616660040</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>TLS</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2293404</td>\n",
+       "      <td>Normal flow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>,</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1616660040</td>\n",
+       "      <td>120</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1616660040122</td>\n",
+       "      <td>1616660040</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1440</td>\n",
+       "      <td>0</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2293407</td>\n",
+       "      <td>Normal flow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1616660040</td>\n",
+       "      <td>120</td>\n",
+       "      <td>1114</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1616660040184</td>\n",
+       "      <td>1616660040</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>TLS</td>\n",
+       "      <td>1</td>\n",
+       "      <td>2293409</td>\n",
+       "      <td>Normal flow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8637202</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>240,,,,,,,,,,,,,,240</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1618262463</td>\n",
+       "      <td>120</td>\n",
+       "      <td>14015728</td>\n",
+       "      <td>14015</td>\n",
+       "      <td>1618262477935</td>\n",
+       "      <td>1618262477</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>DNS.UbuntuONE</td>\n",
+       "      <td>1</td>\n",
+       "      <td>85888693</td>\n",
+       "      <td>Normal flow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8637203</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>,</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1618262477</td>\n",
+       "      <td>120</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1618262477940</td>\n",
+       "      <td>1618262477</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Unknown</td>\n",
+       "      <td>1</td>\n",
+       "      <td>85888694</td>\n",
+       "      <td>Normal flow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8637204</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1259,592,52,,224</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1618262473</td>\n",
+       "      <td>120</td>\n",
+       "      <td>4921754</td>\n",
+       "      <td>4921</td>\n",
+       "      <td>1618262477954</td>\n",
+       "      <td>1618262477</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1460</td>\n",
+       "      <td>1410</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>40</td>\n",
+       "      <td>0</td>\n",
+       "      <td>SSH</td>\n",
+       "      <td>1</td>\n",
+       "      <td>85888695</td>\n",
+       "      <td>Normal flow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8637205</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>205</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1618262477</td>\n",
+       "      <td>120</td>\n",
+       "      <td>376</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1618262477977</td>\n",
+       "      <td>1618262477</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>128</td>\n",
+       "      <td>0</td>\n",
+       "      <td>DNS</td>\n",
+       "      <td>1</td>\n",
+       "      <td>85888696</td>\n",
+       "      <td>Normal flow</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>8637206</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>60,1667,352,,184,,132,52,,236</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1618262468</td>\n",
+       "      <td>120</td>\n",
+       "      <td>9153903</td>\n",
+       "      <td>9153</td>\n",
+       "      <td>1618262477991</td>\n",
+       "      <td>1618262477</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1460</td>\n",
+       "      <td>1410</td>\n",
+       "      <td>7</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>SSH</td>\n",
+       "      <td>1</td>\n",
+       "      <td>85888697</td>\n",
+       "      <td>Normal flow</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>12207873 rows × 50 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "         BIFLOW_DIRECTION  DIRECTION        DST_TO_SRC_SECOND_BYTES  \\\n",
+       "0                       1          0                             40   \n",
+       "1                       1          0                              ,   \n",
+       "2                       1          0                            104   \n",
+       "3                       1          0                              ,   \n",
+       "4                       1          0                             40   \n",
+       "...                   ...        ...                            ...   \n",
+       "8637202                 1          0           240,,,,,,,,,,,,,,240   \n",
+       "8637203                 1          0                              ,   \n",
+       "8637204                 1          0               1259,592,52,,224   \n",
+       "8637205                 1          0                            205   \n",
+       "8637206                 1          0  60,1667,352,,184,,132,52,,236   \n",
+       "\n",
+       "         FIREWALL_EVENT  FIRST_SWITCHED  FLOW_ACTIVE_TIMEOUT  \\\n",
+       "0                     0      1616660040                  120   \n",
+       "1                     0      1616660040                  120   \n",
+       "2                     0      1616660040                  120   \n",
+       "3                     0      1616660040                  120   \n",
+       "4                     0      1616660040                  120   \n",
+       "...                 ...             ...                  ...   \n",
+       "8637202               0      1618262463                  120   \n",
+       "8637203               0      1618262477                  120   \n",
+       "8637204               0      1618262473                  120   \n",
+       "8637205               0      1618262477                  120   \n",
+       "8637206               0      1618262468                  120   \n",
+       "\n",
+       "         FLOW_DURATION_MICROSECONDS  FLOW_DURATION_MILLISECONDS  \\\n",
+       "0                               339                           0   \n",
+       "1                                 0                           0   \n",
+       "2                             44725                          44   \n",
+       "3                                 0                           0   \n",
+       "4                              1114                           1   \n",
+       "...                             ...                         ...   \n",
+       "8637202                    14015728                       14015   \n",
+       "8637203                           0                           0   \n",
+       "8637204                     4921754                        4921   \n",
+       "8637205                         376                           0   \n",
+       "8637206                     9153903                        9153   \n",
+       "\n",
+       "         FLOW_END_MILLISECONDS  FLOW_END_SEC  ...  TCP_WIN_MSS_IN  \\\n",
+       "0                1616660040010    1616660040  ...            1460   \n",
+       "1                1616660040068    1616660040  ...               0   \n",
+       "2                1616660040114    1616660040  ...               0   \n",
+       "3                1616660040122    1616660040  ...            1440   \n",
+       "4                1616660040184    1616660040  ...               0   \n",
+       "...                        ...           ...  ...             ...   \n",
+       "8637202          1618262477935    1618262477  ...               0   \n",
+       "8637203          1618262477940    1618262477  ...               0   \n",
+       "8637204          1618262477954    1618262477  ...            1460   \n",
+       "8637205          1618262477977    1618262477  ...               0   \n",
+       "8637206          1618262477991    1618262477  ...            1460   \n",
+       "\n",
+       "         TCP_WIN_MSS_OUT  TCP_WIN_SCALE_IN  TCP_WIN_SCALE_OUT  SRC_TOS  \\\n",
+       "0                      0                 0                  0        0   \n",
+       "1                      0                 0                  0       40   \n",
+       "2                      0                 0                  0        0   \n",
+       "3                      0                 8                  0       40   \n",
+       "4                      0                 0                  0        0   \n",
+       "...                  ...               ...                ...      ...   \n",
+       "8637202                0                 0                  0        0   \n",
+       "8637203                0                 0                  0       40   \n",
+       "8637204             1410                 7                  7       40   \n",
+       "8637205                0                 0                  0      128   \n",
+       "8637206             1410                 7                  7        0   \n",
+       "\n",
+       "         DST_TOS  L7_PROTO_NAME SAMPLING_INTERVAL TOTAL_FLOWS_EXP        LABEL  \n",
+       "0              0        Unknown                 1         2293398  Normal flow  \n",
+       "1              0           ICMP                 1         2293400  Normal flow  \n",
+       "2              0            TLS                 1         2293404  Normal flow  \n",
+       "3              0        Unknown                 1         2293407  Normal flow  \n",
+       "4              0            TLS                 1         2293409  Normal flow  \n",
+       "...          ...            ...               ...             ...          ...  \n",
+       "8637202        0  DNS.UbuntuONE                 1        85888693  Normal flow  \n",
+       "8637203        0        Unknown                 1        85888694  Normal flow  \n",
+       "8637204        0            SSH                 1        85888695  Normal flow  \n",
+       "8637205        0            DNS                 1        85888696  Normal flow  \n",
+       "8637206        0            SSH                 1        85888697  Normal flow  \n",
+       "\n",
+       "[12207873 rows x 50 columns]"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -9,8 +457,25 @@
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "c30ed9953166c46a373925bc872b270a46ca8c9de287d54e6d16603f90de65fb"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.7.12 ('venv': venv)",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.7.12"
   },
   "orig_nbformat": 4
  },
