--- a/attack_detection.ipynb
+++ b/attack_detection.ipynb
@@ -10,12 +10,13 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "from sklearn.model_selection import train_test_split, cross_val_score, cross_validate\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.metrics import confusion_matrix, precision_score, recall_score, f1_score, classification_report, accuracy_score"
+    "\n",
+    "import utils"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 3,
    "metadata": {
     "scrolled": false
    },
@@ -69,7 +70,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -80,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +90,7 @@
        "97"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -100,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -109,7 +110,7 @@
        "96"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -122,7 +123,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 6,
    "metadata": {
     "scrolled": false
    },
@@ -433,7 +434,7 @@
        "[8 rows x 96 columns]"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -444,7 +445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -456,7 +457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -473,7 +474,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -491,11 +492,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "97673"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "len(sample_df)"
+    "len(df)"
    ]
   },
   {
@@ -507,24 +519,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y = sample_df[\"LABEL\"]\n",
-    "X = sample_df.drop([\"LABEL\"], axis = 1)"
+    "y = df[\"LABEL\"]\n",
+    "X = df.drop([\"LABEL\"], axis = 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn.model_selection import train_test_split\n",
-    "X_train_beta, X_test, y_train_beta, y_test = train_test_split(X, y, test_size=0.3, random_state=42)\n",
-    "validation_rate = 15/70\n",
-    "X_train, X_validation, y_train, y_validation = train_test_split(X_train_beta, y_train_beta, test_size=validation_rate, random_state=42)"
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.45, random_state=42)\n",
+    "val_rate = 15/45\n",
+    "X_test, X_val, y_test, y_val = train_test_split(X_test, y_test, test_size=val_rate, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.5499984642634096\n",
+      "0.30000102382439364\n",
+      "0.15000051191219682\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(len(X_train) / len(X))\n",
+    "print(len(X_test) / len(X))\n",
+    "print(len(X_val) / len(X))"
    ]
   },
   {
@@ -562,7 +595,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +604,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -580,7 +613,7 @@
        "RandomForestClassifier(n_estimators=1000, random_state=42)"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
