--- a/preprocessing.ipynb
+++ b/preprocessing.ipynb
@@ -1386,9 +1386,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "32\n"
+     ]
+    },
     {
      "data": {
       "text/plain": [
@@ -1406,90 +1413,16 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 82,
+     "execution_count": 86,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "print(len(df.columns))\n",
+    "\n",
     "df.columns"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 83,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "FIRST_SWITCHED\n",
-      "FLOW_DURATION_MILLISECONDS\n",
-      "IN_PKTS\n",
-      "L4_DST_PORT\n",
-      "L4_SRC_PORT\n",
-      "LAST_SWITCHED\n",
-      "OUT_BYTES\n",
-      "OUT_PKTS\n",
-      "SRC_TO_DST_SECOND_BYTES\n",
-      "TCP_FLAGS\n",
-      "TCP_WIN_MAX_OUT\n",
-      "TCP_WIN_MSS_IN\n",
-      "LABEL\n",
-      "PROTOCOL_MAP_ICMP\n",
-      "PROTOCOL_MAP_IPV6_ICMP\n",
-      "PROTOCOL_MAP_TCP\n",
-      "PROTOCOL_MAP_UDP\n",
-      "L7_PROTO_NAME_AMAZON\n",
-      "L7_PROTO_NAME_BITTORRENT\n",
-      "L7_PROTO_NAME_DNS\n",
-      "L7_PROTO_NAME_GOOGLE\n",
-      "L7_PROTO_NAME_HTTP\n",
-      "L7_PROTO_NAME_HTTP_PROXY\n",
-      "L7_PROTO_NAME_ICMP\n",
-      "L7_PROTO_NAME_NFS\n",
-      "L7_PROTO_NAME_NTP\n",
-      "L7_PROTO_NAME_QUIC\n",
-      "L7_PROTO_NAME_SSH\n",
-      "L7_PROTO_NAME_STUN\n",
-      "L7_PROTO_NAME_TEAMVIEWER\n",
-      "L7_PROTO_NAME_TLS\n",
-      "L7_PROTO_NAME_UNKNOWN\n"
-     ]
-    }
-   ],
-   "source": [
-    "for column in df.columns:\n",
-    "    print(column)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 84,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "32"
-      ]
-     },
-     "execution_count": 84,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "len(df.columns)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
