--- a/attack_detection.ipynb
+++ b/attack_detection.ipynb
@@ -2,13 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from sklearn.preprocessing import MinMaxScaler, StandardScaler\n",
-    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import train_test_split, cross_val_score\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.pipeline import make_pipeline\n",
     "from sklearn.multiclass import OneVsRestClassifier\n",
@@ -900,6 +900,54 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## K-Fold cross validation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# New division\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.30, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "rf = RandomForestClassifier(n_estimators=50, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.99982449, 0.99997075, 0.99976599, 0.99985374, 0.99988299,\n",
+       "       0.99991224, 0.99982449, 0.99988299, 0.9999415 , 0.99997075])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores = cross_val_score(rf, X_train, y_train, cv=10)\n",
+    "scores"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Support Vector Machine"
    ]
   },
@@ -1106,11 +1154,51 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# K Fold cross validation"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size=0.45, random_state=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "svc = make_pipeline(StandardScaler(), LinearSVC(max_iter=2000))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.99970217, 0.99977663, 0.9997394 , 0.99992554, 0.99992554,\n",
+       "       0.99977662, 0.99985108, 0.99992554, 0.99992554, 0.99985108])"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "scores = cross_val_score(rf, X_train, y_train, cv=10)\n",
+    "scores"
+   ]
   }
  ],
  "metadata": {
