--- a/eda.ipynb
+++ b/eda.ipynb
@@ -9,29 +9,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os.path\n",
     "\n",
     "import pandas as pd\n",
-    "from pandas_profiling import ProfileReport"
+    "from pandas_profiling import ProfileReport\n",
+    "from collections import Counter\n",
+    "from imblearn.under_sampling import RandomUnderSampler"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [],
    "source": [
-    "generate_reports: bool = True\n",
+    "generate_reports: bool = False\n",
     "generate_dfs: bool = True"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 67,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 51,
    "metadata": {},
    "outputs": [
     {
@@ -82,7 +84,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -93,7 +95,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 52,
    "metadata": {},
    "outputs": [
     {
@@ -166,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -385,7 +387,7 @@
        "[5 rows x 50 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -396,7 +398,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -488,7 +490,7 @@
        "freq                   2534718       4090802      6570058  "
       ]
      },
-     "execution_count": 8,
+     "execution_count": 54,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -499,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 55,
    "metadata": {},
    "outputs": [
     {
@@ -603,7 +605,7 @@
        "4                     189           TLS  Normal flow  "
       ]
      },
-     "execution_count": 9,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -615,7 +617,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [
     {
@@ -626,7 +628,7 @@
        "      dtype=object)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 56,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -637,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 57,
    "metadata": {},
    "outputs": [
     {
@@ -646,7 +648,7 @@
        "[]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 57,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -659,7 +661,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -677,19 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from imblearn.over_sampling import RandomOverSampler\n",
-    "from collections import Counter\n",
-    "\n",
-    "ros = RandomOverSampler(sampling_strategy='minority')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 68,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -703,7 +693,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 69,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -715,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
@@ -740,84 +730,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Oversampling DDoS attack"
+    "### Undersampling the dataset"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "attacks_oversampling = pd.concat([syn_attacks, dos_attacks])\n",
-    "y_oversampling = attacks_oversampling[\"LABEL\"]\n",
-    "x_oversampling = attacks_oversampling.drop([\"LABEL\"], axis= 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 19,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "X_oversampling_res, y_oversampling_res = ros.fit_resample(x_oversampling, y_oversampling)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 70,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Resampled dataset shape Counter({'SYN Scan - aggressive': 2496814, 'Denial of Service Slowloris': 2496814})\n"
+      "Resampled dataset shape Counter({'Denial of Service Slowloris': 864054, 'SYN Scan - aggressive': 864054})\n"
      ]
     }
    ],
    "source": [
-    "print('Resampled dataset shape %s' % Counter(y_oversampling_res))"
+    "# Syn attacks\n",
+    "undersampling_dt = pd.concat([syn_attacks, dos_attacks])\n",
+    "y = undersampling_dt[\"LABEL\"]\n",
+    "X = undersampling_dt.drop([\"LABEL\"], axis=1)\n",
+    "rus = RandomUnderSampler(random_state=0)\n",
+    "X_undersampled, y_undersampled = rus.fit_resample(X, y)\n",
+    "\n",
+    "print('Resampled dataset shape %s' % Counter(y_undersampled))\n",
+    "X_undersampled[\"LABEL\"] = y_undersampled\n",
+    "undersample_res = X_undersampled\n",
+    "df = pd.concat([normal_flow, r_u_dead_attacks, undersample_res])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "oversampling_result = X_oversampling_res.copy()\n",
-    "oversampling_result[\"LABEL\"] = y_oversampling_res.copy()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 22,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.concat([normal_flow, r_u_dead_attacks, oversampling_result])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Undersampling benign"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 27,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from imblearn.under_sampling import RandomUnderSampler"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 71,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -829,60 +774,68 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 72,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resampled dataset shape Counter({'Denial of Service Slowloris': 864054, 'Normal flow': 864054})\n"
+     ]
+    }
+   ],
    "source": [
-    "benign_us = pd.concat([syn_attacks, normal_flow])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 25,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "y = benign_us[\"LABEL\"]\n",
-    "X = benign_us.drop([\"LABEL\"], axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 28,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rus = RandomUnderSampler(random_state=0)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 29,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Normal Flow attacks\n",
+    "undersampling_dt = pd.concat([normal_flow, dos_attacks])\n",
+    "y = undersampling_dt[\"LABEL\"]\n",
+    "X = undersampling_dt.drop([\"LABEL\"], axis=1)\n",
+    "rus = RandomUnderSampler(random_state=0)\n",
     "X_undersampled, y_undersampled = rus.fit_resample(X, y)\n",
     "\n",
-    "print('Resampled dataset shape %s' % Counter(y_undersampled))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "print('Resampled dataset shape %s' % Counter(y_undersampled))\n",
     "X_undersampled[\"LABEL\"] = y_undersampled\n",
-    "undersample_res = X_undersampled"
+    "undersample_res = X_undersampled\n",
+    "df = pd.concat([syn_attacks, r_u_dead_attacks, undersample_res])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 73,
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.concat([dos_attacks, r_u_dead_attacks, undersample_res])"
+    "normal_flow = df.loc[df[\"LABEL\"] == labels_dic[0]]\n",
+    "syn_attacks = df.loc[df[\"LABEL\"] == labels_dic[1]]\n",
+    "r_u_dead_attacks = df.loc[df[\"LABEL\"] == labels_dic[2]]\n",
+    "dos_attacks = df.loc[df[\"LABEL\"] == labels_dic[3]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 74,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Resampled dataset shape Counter({'Denial of Service R-U-Dead-Yet': 864054, 'Denial of Service Slowloris': 864054})\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Normal Flow attacks\n",
+    "undersampling_dt = pd.concat([r_u_dead_attacks, dos_attacks])\n",
+    "y = undersampling_dt[\"LABEL\"]\n",
+    "X = undersampling_dt.drop([\"LABEL\"], axis=1)\n",
+    "rus = RandomUnderSampler(random_state=0)\n",
+    "X_undersampled, y_undersampled = rus.fit_resample(X, y)\n",
+    "\n",
+    "print('Resampled dataset shape %s' % Counter(y_undersampled))\n",
+    "X_undersampled[\"LABEL\"] = y_undersampled\n",
+    "undersample_res = X_undersampled\n",
+    "df = pd.concat([syn_attacks, normal_flow, undersample_res])"
    ]
   },
   {
@@ -894,9 +847,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 75,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(3456216, 50)"
+      ]
+     },
+     "execution_count": 75,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# create csv if it doesn't exist\n",
     "if not os.path.isfile(\"dataset/balanced_df.csv\") and generate_dfs:\n",
@@ -914,16 +878,34 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 76,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(400000, 50)"
+      ]
+     },
+     "execution_count": 76,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df_s = df.copy().groupby('LABEL', group_keys=False).apply(lambda x: x.sample(frac=0.1157335))\n",
+    "if not os.path.isfile(\"dataset/sampled_df.csv\") and True:\n",
+    "    df_s.to_csv(\"dataset/sampled_df.csv\", index_label=False)\n",
+    "\n",
+    "df_s.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "df = df.groupby('LABEL', group_keys=False).apply(lambda x: x.sample(frac=0.05))\n",
-    "if not os.path.isfile(\"dataset/sampled_df.csv\") and generate_dfs:\n",
-    "    df.to_csv(\"dataset/sampled_df.csv\", index_label=False)\n",
-    "\n",
-    "df.shape"
-   ]
+   "source": []
   }
  ],
  "metadata": {
@@ -931,7 +913,7 @@
    "hash": "c30ed9953166c46a373925bc872b270a46ca8c9de287d54e6d16603f90de65fb"
   },
   "kernelspec": {
-   "display_name": "Python 3.7.12 ('venv': venv)",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -945,9 +927,8 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.12"
-  },
-  "orig_nbformat": 4
+   "version": "3.9.9"
+  }
  },
  "nbformat": 4,
  "nbformat_minor": 2
